--- a/manifest.json
+++ b/manifest.json
@@ -6,14 +6,14 @@
   "content_scripts": [
     {
       "matches": ["https://www.chatwork.com/", "https://kcw.kddi.ne.jp/"],
-      "js": ["/js/insert_tag.js", "/js/insert_to.js"]
+      "js": ["/js/insert_tag.js", "/js/insert_to.js", "/js/copy_link.js"]
     }
   ],
   "options_ui": {
     "page": "/setting/options.html",
     "browser_style": false
   },
-  "permissions": ["storage"],
+  "permissions": ["storage", "clipboardWrite"],
   "icons": {
     "128": "icon128.png"
   }
