--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,10 @@
       "js": ["/js/insert_tag.js", "/js/insert_to.js", "/js/copy_link.js"]
     }
   ],
+  "background": {
+    "service_worker": "/js/background.js",
+    "type": "module"
+  },
   "options_ui": {
     "page": "/setting/options.html",
     "browser_style": false
