--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Chatwork Tools",
-  "description": "Insert tags from click each icon. Insert To tag on click user icon with Shift key.",
-  "version": "1.5.1",
+  "description": "Insert tags or emojis from click each icon. Insert To tag with @ operation.",
+  "version": "1.5.2",
   "manifest_version": 3,
   "content_scripts": [
     {
