--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Chatwork Tools",
-  "description": "Insert tags or emojis from click each icon. Insert To tag with @ operation.",
-  "version": "1.5.4",
+  "description": "Chatwork独自タグのハイライト表示、アイコンクリックによる独自タグやよく使うアイコン、カスタムテキストの挿入、@によるメンション機能など",
+  "version": "1.5.5",
   "manifest_version": 3,
   "content_scripts": [
     {
