--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,8 @@
   },
   "options_ui": {
     "page": "/setting/options.html",
-    "browser_style": false
+    "browser_style": false,
+    "open_in_tab": true
   },
   "permissions": ["storage", "clipboardWrite"],
   "icons": {
