--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,13 @@
   "content_scripts": [
     {
       "matches": ["https://www.chatwork.com/", "https://kcw.kddi.ne.jp/"],
-      "js": ["/js/insert_tag.js", "/js/insert_to.js", "/js/copy_link.js"]
+      "js": ["/js/insert_tag.js", "/js/insert_to.js", "/js/copy_link.js"],
+      "world": "ISOLATED"
+    },
+    {
+      "matches": ["https://www.chatwork.com/", "https://kcw.kddi.ne.jp/"],
+      "js": ["/js/proxy.js"],
+      "world": "MAIN"
     }
   ],
   "background": {
